force-app/main/default/objects/Product_Material__c/Product_Material__c.object-meta.xml
<CustomObject>
    <label>Product Material</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Product Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>