force-app/main/default/objects/Product_Material__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Product Materials</relationshipLabel>
    <relationshipName>Product_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>