force-app/main/default/objects/Product_Material__c/fields/Quantity_Greater_than_One__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Greater_than_One__c</fullName>
    <formula>Quantity__c &gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Greater than One</label>
    <type>Checkbox</type>
</CustomField>